<resources>
    <string name="app_name">mirrAR</string>
    <string name="next">NEXT</string>
    <string name="requirements_calculator">Requirements Calculator</string>
    <string name="send">Send</string>
    <string name="info_form">Information Form</string>
    <string name="no_email_client">No Email Client Present</string>
    <string name="advance_payment_amount">Advance Payment Amount</string>
    <string name="sales_person_name">Sales Person Name</string>
    <string name="client_name">Client Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="e_mail_id">E-mail ID</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="address">Address</string>
    <string name="advance_payment_method">Advance Payment Method</string>
    <string name="processed_images">Processed Images</string>
    <string name="mac_mini">Mac Mini</string>
    <string name="tv">TV</string>
    <string name="stand">Stand</string>
    <string name="ipad">iPad</string>
    <string name="tax">Tax</string>
    <string name="total">Total :</string>
    <string name="to_be_paid">To be Paid :</string>
    <string name="_0">0</string>
    <string name="_18">18%</string>
    <string name="_0">0</string>
    <string name="selected">Selected:</string>
    <string name="na">NA</string>
    <string name="na">NA</string>
</resources>
