<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                app:cardBackgroundColor="#fff"
                app:cardCornerRadius="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/black"
                            android:padding="4dp" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/selected_recyclerview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:overScrollMode="never" />


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="0.5dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/black"
                            android:padding="4dp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/total"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/cart_items_delivery_ll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tax"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=" :"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tax"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/_18"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="5dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/to_be_paid"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/to_be_paid"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:gravity="end"
                                android:text="@string/_0"
                                android:textColor="@color/black"
                                android:textSize="17sp"
                                android:textStyle="bold" />


                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <Button
            android:id="@+id/next_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:padding="10dp"
            android:text="Next"
            android:textColor="@color/white" />

    </LinearLayout>
</layout>

