<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="mainModel"
            type="com.example.mirrar.viewmodel.MainViewModel" />
    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context=".views.MainActivity">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/requirements_calculator"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:text="@string/ipad"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/ipad_model"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1.25"
                        android:gravity="center"
                        android:onClick="@{()-> mainModel.oniPadModelClicked()}"
                        android:text="Select model"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:text="@string/stand"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/stand"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1.25"
                        android:gravity="center"
                        android:onClick="@{()-> mainModel.onStandClicked()}"
                        android:text="Select model"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:text="@string/tv"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/tv_model"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1.25"
                        android:gravity="center"
                        android:onClick="@{()-> mainModel.onTVModelClicked()}"
                        android:text="Select model"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:text="@string/mac_mini"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/mac_model"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1.25"
                        android:gravity="center"
                        android:onClick="@{()-> mainModel.onMacModelClicked()}"
                        android:text="Select model"
                        android:textSize="15sp" />

                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_margin="5dp"
                    android:background="@color/line_color" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:weightSum="2">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="0.75"
                        android:gravity="center"
                        android:text="@string/processed_images"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.25"
                        android:orientation="vertical">

                        <SeekBar
                            android:id="@+id/images_seekBar"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:max="1000"
                            android:min="0"
                            android:padding="5dp" />

                        <TextView
                            android:id="@+id/images_value"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="0" />

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>


        </androidx.core.widget.NestedScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:orientation="horizontal"
            android:onClick="@{()-> mainModel.onNextClicked()}"
            android:padding="10dp">

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="Total: NA"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center|end"
                android:gravity="center|end"
                android:padding="5dp"
                android:text="Next"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </FrameLayout>

    </LinearLayout>

</layout>